# tcp-producer-send-file-aws

./: CMakeLists.txt  Dockerfile  README.md
app/: main.cpp
include/stream/: ProducerStream.h
include/tcp/: Producer.h  TcpReceiver.h
src/stream/: ProducerStream.cpp
src/tcp/: Producer.cpp  TcpReceiver.cpp
test/: ClientTcpSenderBinary.py  ProducerStreamReceiver.py  ProducerTest.cpp
